Frontend Register button Mapping to the backend register method

--- a/AlphaTechBank.UI/AlphaTechBank.UI.csproj
+++ b/AlphaTechBank.UI/AlphaTechBank.UI.csproj
@@ -18,6 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\AlphaTechBank.Core\AlphaTechBank.Core.csproj" />
     <ProjectReference Include="..\AlphaTechBank.Repository\AlphaTechBank.Repository.csproj" />
   </ItemGroup>
 
